# zord

./: .gitignore  CLAUDE.md  Cargo.toml  KICKSTART.md  LICENSE  NAMING.md  README.md
.cargo/: config.toml
.claude/hooks/: rebuild-release.sh
.claude/memory/: MEMORY.md  architecture.md  asr-diarization-model-watchlist.md  business-direction.md  capture-design.md  ci-macos-xcode26.md  ci-windows-crt.md  ci-windows-ort-crt.md  commit-and-workflow.md  cross-meeting-synthesis.md  data-locations.md  dep-upgrade-notes.md  diarization-design.md  docs-canonical.md  dx-bundling-gotchas.md  feature-build-deps.md  feature-flags.md  llm-prefill-nbatch.md  llm-test-endpoint.md  macos-build.md  meter-event-throttle.md  model-licensing.md  platform-integrations.md  productionization.md  project-ledger.md  summary-model-catalog.md  teams-audio-options.md  verification-limits.md  voiceprints.md
.github/workflows/: ci.yml  diag-macos-swift.yml  release.yml
crates/zord-app/: Cargo.toml
crates/zord-app/src/: capture.rs  main.rs  pipeline.rs
crates/zord-audio/: Cargo.toml
crates/zord-audio/src/: compress.rs  level.rs  lib.rs  resample.rs  segment.rs  timeline.rs  wav.rs
crates/zord-capture/: Cargo.toml
crates/zord-capture/src/: lib.rs  microphone.rs  system.rs
crates/zord-config/: Cargo.toml
crates/zord-config/src/: lib.rs
crates/zord-core/: Cargo.toml
crates/zord-core/src/: lib.rs
crates/zord-diarize/: Cargo.toml
crates/zord-diarize/src/: diarizer.rs  embedder.rs  lib.rs
crates/zord-export/: Cargo.toml
crates/zord-export/src/: lib.rs
crates/zord-gui/: Cargo.toml  Dioxus.toml  Info.plist  build.rs  entitlements.plist
crates/zord-gui/icons/: icon.icns
crates/zord-gui/src/: engine.rs  main.rs  osutil.rs  overview.rs  profile.rs  sentiment.rs  speakers.rs  style.css  timeline.rs  update.rs  wizard.rs
crates/zord-integrations/: Cargo.toml
crates/zord-integrations/src/: discord.rs  fake.rs  integration.rs  lib.rs  session.rs
crates/zord-net/: Cargo.toml
crates/zord-net/src/: lib.rs
crates/zord-overview/: Cargo.toml
crates/zord-overview/src/: extract.rs  lib.rs  reconcile.rs
crates/zord-store/: Cargo.toml
crates/zord-store/src/: lib.rs
crates/zord-summarize/: Cargo.toml
crates/zord-summarize/src/: backend.rs  lib.rs  opts.rs  remote.rs  summarizer.rs
crates/zord-transcribe/: Cargo.toml
crates/zord-transcribe/src/: lib.rs  model.rs  offline.rs  parakeet.rs  whisper.rs
crates/zord-web/: Cargo.toml
crates/zord-web/src/: dashboard.html  lib.rs
docs/: PLAN.md  RELEASE.md  SECURITY.md  SIGNING.md  discord-integration.md  model-licensing.md  voiceprints-legal.md
docs/diagrams/: integrations.md
docs/superpowers/plans/: 2026-06-10-audio-compression.md  2026-06-10-discord-record-button.md  2026-06-10-ui-polish-theming.md  2026-06-10-voiceprints.md  2026-06-11-living-overview.md
docs/superpowers/specs/: 2026-06-10-audio-compression-design.md  2026-06-10-discord-record-button-design.md  2026-06-10-setup-wizard-design.md  2026-06-10-ui-polish-theming-design.md  2026-06-10-voiceprints-design.md  2026-06-11-living-overview-design.md
tools/: make_icon.swift
