[workspace]
resolver = "2"
members = [
    "crates/zord-core",
    "crates/zord-net",
    "crates/zord-audio",
    "crates/zord-capture",
    "crates/zord-transcribe",
    "crates/zord-store",
    "crates/zord-config",
    "crates/zord-export",
    "crates/zord-summarize",
    "crates/zord-overview",
    "crates/zord-diarize",
    "crates/zord-web",
    "crates/zord-app",
    "crates/zord-gui",
]

[workspace.package]
version = "0.2.18"
edition = "2021"
license = "MIT"
authors = ["Zord"]

[workspace.dependencies]
# internal
zord-core = { path = "crates/zord-core" }
zord-net = { path = "crates/zord-net" }
zord-audio = { path = "crates/zord-audio" }
zord-capture = { path = "crates/zord-capture" }
zord-transcribe = { path = "crates/zord-transcribe" }
zord-store = { path = "crates/zord-store" }
zord-config = { path = "crates/zord-config" }
zord-export = { path = "crates/zord-export" }
zord-summarize = { path = "crates/zord-summarize" }
zord-overview = { path = "crates/zord-overview" }
zord-diarize = { path = "crates/zord-diarize" }
zord-web = { path = "crates/zord-web" }

# shared third-party
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
