[package]
name = "zord-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zord"
path = "src/main.rs"

[features]
default = []
# Enable the NVIDIA Parakeet backend (sherpa-onnx).
parakeet = ["zord-transcribe/parakeet"]

[dependencies]
zord-core = { workspace = true }
zord-audio = { workspace = true }
zord-capture = { workspace = true }
zord-transcribe = { workspace = true }
zord-store = { workspace = true }
zord-config = { workspace = true }
zord-export = { workspace = true }
zord-web = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
hound = "3.5"
