[package]
name = "zord-app"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "zord"
path = "src/main.rs"

[features]
default = []
# Enable the NVIDIA Parakeet backend (sherpa-onnx).
parakeet = ["zord-transcribe/parakeet"]
# Enable SQLCipher at-rest encryption (+ keychain + hidden passphrase prompts).
encryption = ["zord-store/encryption", "zord-config/encryption", "dep:rpassword"]
# AI features (summarize/compress/overview) with the built-in local LLM
# (llama.cpp — heavy build).
llm-local = ["dep:zord-summarize", "zord-summarize/llama", "zord-overview/llama"]
# Same AI features against a user-provided OpenAI-compatible server. Pure
# HTTP — no llama.cpp toolchain. Composes with llm-local.
llm-remote = ["dep:zord-summarize", "zord-summarize/remote", "zord-overview/remote"]
# Enable per-speaker diarization (sherpa-onnx).
diarization = ["dep:zord-diarize", "zord-diarize/sherpa"]

[dependencies]
zord-core = { workspace = true }
zord-audio = { workspace = true }
zord-capture = { workspace = true }
zord-transcribe = { workspace = true }
zord-store = { workspace = true }
zord-config = { workspace = true }
zord-export = { workspace = true }
zord-web = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
hound = "3.5"
rpassword = { version = "7", optional = true }
zord-summarize = { workspace = true, optional = true }
# Always present: its ledger types + ledger_context printer are AI-free (the
# fold/rebuild fns are feature-gated inside the crate). The llm-* features turn
# on its backend-bearing code.
zord-overview = { workspace = true }
zord-diarize = { workspace = true, optional = true }
