[package]
name = "zord-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zord-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
cpal = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "6.1"

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23"
