[package]
name = "zord-config"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
default = []
# Optional OS-keychain storage for the DB passphrase.
encryption = ["dep:keyring"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
directories = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
keyring = { version = "3", optional = true }
