[package]
name = "zord-gui"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "zord-gui"
path = "src/main.rs"

[features]
default = []
# Enable the NVIDIA Parakeet backend (sherpa-onnx).
parakeet = ["zord-transcribe/parakeet"]
# Enable SQLCipher at-rest encryption (unlock screen + enable/disable in settings).
encryption = ["zord-store/encryption", "zord-config/encryption"]
# AI features (summaries, compression, Overview, chat, auto-titles) with the
# built-in local LLM (llama.cpp — heavy build).
llm-local = [
    "dep:zord-summarize",
    "zord-summarize/llama",
    "dep:zord-overview",
    "zord-overview/llama",
]
# Same AI features against a user-provided OpenAI-compatible server (LM Studio,
# Ollama, vLLM, …). Pure HTTP — no llama.cpp toolchain. Composes with llm-local.
llm-remote = [
    "dep:zord-summarize",
    "zord-summarize/remote",
    "dep:zord-overview",
    "zord-overview/remote",
]
# Enable per-speaker diarization (sherpa-onnx).
diarization = ["dep:zord-diarize", "zord-diarize/sherpa"]
# Persistent cross-session speaker identification (voiceprints). Opt-in at
# runtime AND removable at build time (docs/voiceprints-legal.md).
voiceprints = ["diarization"]
# Discord voice integration (per-participant capture via songbird; heavy build).
discord = ["zord-integrations/discord"]
# Meaning-based search: a local ONNX text-embedding model (BGE-small-en-v1.5,
# ~24 MB) embeds transcript chunks and scores them by cosine similarity.
# Heavy build dep: ort (ONNX Runtime) + fastembed — hence opt-in.
semantic = ["dep:fastembed"]
# In-app update check + Windows in-place install (Phase 34). Compiled ONLY into
# the GitHub / own-store channel — store builds (Steam/MS Store) must not
# self-update (the store does it), so their release jobs omit this feature.
self-update = ["dep:self-replace"]
# Sentiment "moments" on the Timeline (Phase 49): audio-prosody markers derived
# from two Apache-2.0 ONNX models run on the SAME `ort` runtime the `semantic`
# feature already ships — YAMNet (audio events: laughter/applause/…) and a
# wav2vec2-base speech-emotion model (persistent non-neutral emotion). No LLM.
# Heavy build dep (ort/ONNX Runtime + ndarray) — hence opt-in.
sentiment = ["dep:ort", "dep:ndarray"]

[dependencies]
zord-core = { workspace = true }
zord-audio = { workspace = true }
zord-capture = { workspace = true }
zord-transcribe = { workspace = true }
zord-store = { workspace = true }
zord-config = { workspace = true }
zord-export = { workspace = true }
zord-integrations = { workspace = true }
zord-net = { workspace = true }
zord-summarize = { workspace = true, optional = true }
zord-overview = { workspace = true, optional = true }
zord-diarize = { workspace = true, optional = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
dioxus = { version = "0.7", features = ["desktop"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
arboard = "3"
# Open external URLs (bot-invite authorize page, release downloads) in the
# system browser.
open = "5"
# Windows portable-EXE update swap (rename running exe aside, write the new one).
self-replace = { version = "1", optional = true }
# Per-line transcript playback (Sink + SamplesBuffer only — we read WAVs with
# hound ourselves, so no decoder features needed).
rodio = { version = "0.22", default-features = false, features = ["playback"] }
# Local-timezone date display in the session list.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Markdown rendering for the living Overview document (Phase 39d).
# default-features = false drops the html5ever/SIMD deps; we only need push_html.
pulldown-cmark = { version = "0.12", default-features = false, features = [
    "html",
] }
# Diagnostic bundle export (Phase 43c): write a zip the user can attach to a bug
# report. Pure Rust (no libz dependency) with deflate compression only — the
# bundle is small (a few log files + JSON), so bzip2/zstd are not worth the size.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Semantic search (Phase 45): local text-embedding inference via ONNX Runtime.
# Only compiled when the `semantic` feature is enabled. We disable the default
# hf-hub feature so fastembed does NOT pull in the HF HTTP client — we download
# model files ourselves via zord-net so our proxy-aware agent is used.
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls"], optional = true }
# Sentiment moments (Phase 49): raw ONNX Runtime + ndarray for YAMNet + wav2vec2.
# The version + feature set MIRROR what `fastembed` (the `semantic` feature)
# already pins in Cargo.lock so the whole workspace resolves to a SINGLE `ort`
# build — no second ONNX Runtime. fastembed 5.16.1 pins `ort = "=2.0.0-rc.12"`
# with default-features=false + ["ndarray","std","api-24"], and its
# `ort-download-binaries-rustls-tls` path (which zord-gui selects above) adds
# `ort/download-binaries` + `ort/tls-rustls`. We replicate exactly that union
# here so enabling `sentiment` alongside `semantic` unifies to one feature set.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["ndarray", "std", "api-24", "download-binaries", "tls-rustls"], optional = true }
# ndarray for shaping model I/O tensors. Pinned to the version fastembed/ort
# already lock (0.17.2), default-features off to match fastembed's ndarray dep.
ndarray = { version = "0.17.2", default-features = false, optional = true }
