[package]
name = "zord-overview"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Document updates need an LLM backend from zord-summarize — the local
# llama.cpp engine and/or the remote OpenAI-compatible client. Without either,
# the crate still compiles but only the pure helpers are available.
llama = ["dep:zord-summarize", "zord-summarize/llama"]
remote = ["dep:zord-summarize", "zord-summarize/remote"]

[dependencies]
zord-core = { workspace = true }
zord-store = { workspace = true }
zord-config = { workspace = true }
zord-summarize = { workspace = true, optional = true }
anyhow = { workspace = true }
