[package]
name = "zord-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zord-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
