[package]
name = "zord-store"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
default = []
# At-rest encryption via SQLCipher (bundles SQLCipher + vendored OpenSSL).
# Build needs a C compiler + perl. Default build stays on plain bundled SQLite.
encryption = ["rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
zord-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.40", features = ["bundled"] }
