[package]
name = "zord-transcribe"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zord-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
directories = "5"
ureq = "2"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.16" }
