[package]
name = "zord-transcribe"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Adds the NVIDIA Parakeet backend (sherpa-onnx, ONNX). Heavier build; the
# sherpa-onnx build script downloads prebuilt libs. tar+bzip2 unpack the model.
parakeet = ["dep:sherpa-onnx", "dep:tar", "dep:bzip2"]

[dependencies]
zord-core = { workspace = true }
zord-audio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hound = "3"
directories = "5"
zord-net = { workspace = true }
sherpa-onnx = { version = "1.13", optional = true }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.4", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.16" }
