[package]
name = "zord-web"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
zord-core = { workspace = true }
zord-store = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
